<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.account.CreateAccountFragment">

    <LinearLayout
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="8dp"
            android:paddingHorizontal="25sp"
            android:text="@string/info_completion"
            android:textSize="30sp" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:hint="@string/city"
            android:paddingHorizontal="20sp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_city"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:hint="@string/address"
            android:paddingHorizontal="20sp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_address"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPersonName" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:hint="@string/zip_code"
            android:paddingHorizontal="20sp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_zip_code"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="8dp"
            android:layout_marginVertical="15dp" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout2"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="24dp"
                android:hint="@string/coupon"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/btn_add_coupon"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_coupon"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <ImageButton
                android:id="@+id/btn_add_coupon"
                android:layout_width="51dp"
                android:layout_height="55dp"
                android:layout_marginStart="8dp"
                android:src="@drawable/ic_baseline_add_24"
                app:layout_constraintBottom_toBottomOf="@+id/textInputLayout2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/textInputLayout2"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/tv_total_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="44dp"
                android:textSize="25sp"
                app:layout_constraintBottom_toBottomOf="@+id/textView7"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/textView7" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:textSize="25sp"
                android:text="قیمت نهایی:"
                app:layout_constraintEnd_toEndOf="@+id/textInputLayout2"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout2" />

        </androidx.constraintlayout.widget.ConstraintLayout>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_complete_order"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:padding="8dp"
            android:layout_marginHorizontal="25sp"
            android:text="@string/complete_order"
            android:textSize="24sp"
            app:cornerRadius="18sp" />
    </LinearLayout>

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lottie"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/loading" />

</LinearLayout>